feat(shipping): add addresses endpoints
